--- a/listings-service/package.json
+++ b/listings-service/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "db:migrate": "sequelize db:migrate",
+    "db:migrate:undo": "sequelize db:migrate:undo",
     "watch": "babel-watch -L src/index.js"
   },
   "keywords": [],
@@ -14,6 +16,9 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.13.12",
     "babel-plugin-module-resolver": "^4.1.0",
-    "babel-watch": "^7.4.1"
+    "babel-watch": "^7.4.1",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.6.2",
+    "sequelize-cli": "^6.2.0"
   }
 }
