--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build: "./listings-service"
     depends_on: 
       - listing-service-db
+    environment: 
+      - DB_URL=mysql://root:password@listings-services-db/db?charset=UTF8
     volumes: 
       - ./listings-service:/opt/app
   
@@ -12,11 +14,15 @@ services:
       - MYSQL_ROOT_PASSWORD=MYSQL_ROOT_PASSWORD
       - MYSQL_DATABASE=db
     image: mysql:5.7.20
+    ports: 
+      - 0.0.0.0:7200:3306
     
   users-service:
     build: "./users-service"
     depends_on: 
       - users-service-db
+    environment: 
+      - DB_URL=mysql://root:password@users-services-db/db?charset=UTF8
     volumes: 
       - ./users-service:/opt/app
   
@@ -25,3 +31,5 @@ services:
       - MYSQL_ROOT_PASSWORD=MYSQL_ROOT_PASSWORD
       - MYSQL_DATABASE=db
     image: mysql:5.7.20
+    ports: 
+      - 0.0.0.0:7201:3306
