--- a/listings-service/.sequelizerc
+++ b/listings-service/.sequelizerc
@@ -1,6 +1,6 @@
 const path = require("path")
 
-module.export = {
+module.exports = {
     config: path.resolve(__dirname, "./sequelize/config.js"),
     "migrations-path": path.resolve(__dirname, "./sequelize/migrations")
 };
