--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 version: "3"
 services: 
-  listing-service:
+  listings-services:
     build: "./listings-service"
     depends_on: 
-      - listing-service-db
+      - listings-services-db
     environment: 
-      - DB_URL=mysql://root:password@listings-services-db/db?charset=UTF8
+      - DB_URI=mysql://root:password@listings-services-db/db?charset=UTF8
     volumes: 
-      - ./listings-service:/opt/app
+      - ./listings-services:/opt/app
   
-  listing-service-db:
+  listings-services-db:
     environment: 
       - MYSQL_ROOT_PASSWORD=MYSQL_ROOT_PASSWORD
       - MYSQL_DATABASE=db
@@ -17,16 +17,16 @@ services:
     ports: 
       - 0.0.0.0:7200:3306
     
-  users-service:
-    build: "./users-service"
+  users-services:
+    build: "./users-services"
     depends_on: 
-      - users-service-db
+      - users-services-db
     environment: 
-      - DB_URL=mysql://root:password@users-services-db/db?charset=UTF8
+      - DB_URI=mysql://root:password@users-services-db/db?charset=UTF8
     volumes: 
-      - ./users-service:/opt/app
+      - ./users-services:/opt/app
   
-  users-service-db:
+  users-services-db:
     environment: 
       - MYSQL_ROOT_PASSWORD=MYSQL_ROOT_PASSWORD
       - MYSQL_DATABASE=db
