creating listing services and exposing on port

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - listings-services-db
     environment: 
       - DB_URI=mysql://root:password@listings-services-db/db?charset=UTF8
+    ports: 
+      - 7100:7100
     volumes: 
       - ./listings-services:/opt/app
   
@@ -23,6 +25,8 @@ services:
       - users-services-db
     environment: 
       - DB_URI=mysql://root:password@users-services-db/db?charset=UTF8
+    ports: 
+      - 7100:7100
     volumes: 
       - ./users-services:/opt/app
   
