--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,15 @@
 version: "3"
 services: 
+  api-gateway:
+    build: "./api-gateway"
+    depends_on: 
+      - listings-services
+      - users-services
+    ports: 
+      - 7000:7000
+    volumes: 
+      - ./api-gateway:/opt/app
+
   listings-services:
     build: "./listings-services"
     depends_on: 
