--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -13,8 +13,12 @@
     "babel-watch": "^7.4.1"
   },
   "dependencies": {
+    "@babel/core": "^7.13.10",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.13.12",
     "apollo-server": "^2.22.1",
     "apollo-server-express": "^2.22.1",
+    "babel-loader": "^8.2.2",
     "babel-plugin-module-resolver": "^4.1.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
