--- a/users-services/package.json
+++ b/users-services/package.json
@@ -17,10 +17,13 @@
     "@babel/preset-env": "^7.13.12",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-watch": "^7.4.1",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.2",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "uuid": "^8.3.2"
   }
 }
