--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "got": "^11.8.2",
-    "graphql": "^15.5.0"
+    "graphql": "^15.5.0",
+    "loadsh": "0.0.4"
   }
 }
